--- a/style.css
+++ b/style.css
@@ -38,12 +38,11 @@ body {
 .main {
   width: 100%;
   height: 100vh;
-  background: linear-gradient(
+  background:url(jpg/five.jpg),linear-gradient(
       to top,
       rgba(1, 61, 61, 0.993),
       rgba(0, 68, 68, 0.336)
-    ),
-    url(jpg/five.jpg);
+    );
   background-position: 100%;
   background-attachment: fixed;
   background-size: cover;
