--- a/style.css
+++ b/style.css
@@ -680,6 +680,7 @@ h2 {
     width: 60%;
     margin: 70px auto;
     text-align: center;
+    margin-top: 150px;
   }
   .banner h1 {
     font-size: 3em;
